syntax="proto3";
package proto;

option go_package = "github.com/ayanmali/Diamond/diamond-go-service/proto";

service Swaps {
    // RPC for swapping stablecoins into spot tokens
    rpc SwapStablesToSpot(SwapStablesToSpotRequest) returns (SwapStablesToSpotResponse) {}
    // RPC for swapping stablecoins into fiat currency
    rpc SwapStablesToFiat(SwapStablesToFiatRequest) returns (SwapStablesToFiatResponse) {}
    // RPC for swapping spot tokens into fiat currency
    rpc SwapSpotToFiat(SwapSpotToFiatRequest) returns (SwapSpotToFiatResponse) {}

}

message AccountWallet {
    int64 AccountID = 1;
    string walletAddress = 2;
    string chain = 3;
}

// Structure of an rpc request
message SwapStablesToSpotRequest {
    AccountWallet AccountWallet = 1;
    string initialStablecoinCurrency = 2;
    double amount = 3;
    string targetToken = 4;
}

// Structure of an rpc response
message SwapStablesToSpotResponse {
    string response = 1;
}

message SwapStablesToFiatRequest {
    AccountWallet AccountWallet = 1;
    string stablecoinCurrency = 2;
    double amount = 3;
}

message SwapStablesToFiatResponse {
    string response = 1;
}

message SwapSpotToFiatRequest {
    AccountWallet AccountWallet = 1;
    double amount = 2;
}

message SwapSpotToFiatResponse {
    string response = 1;
}